# vella

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: EmptyState.tsx  StatCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Documents.tsx  Invoices.tsx  Ledger.tsx  Overview.tsx  Reconciliation.tsx  ReviewQueue.tsx  Tax.tsx
frontend/src/styles/: global.css
migrations/: 001_init.sql
src/: __init__.py  config.py  db.py
src/agents/: __init__.py  audit_agent.py  invoice_agent.py  reconciliation_agent.py  tax_agent.py
src/api/: __init__.py  documents.py  invoices.py  ledger.py  reconciliation.py  tax.py
src/governance/: __init__.py  gate.py
src/ingestion/: __init__.py  extractor.py  invoice_parser.py  models.py  pipeline.py  triage.py
src/ledger/: __init__.py  events.py  store.py
src/verification/: __init__.py
