[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vella-ops"
version = "0.1.0"
description = "vella Ops — Autonomous Finance Operations. AI agents that process invoices, reconcile accounts, prepare tax filings, and handle compliance with full audit trails."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
